objects/Sales_Coach_Section__c.object
<CustomObject><fields>
        <fullName>Sales_Coach_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Coach Stage</label>
        <referenceTo>Sales_Coach_Stage__c</referenceTo>
        <relationshipLabel>Sales Coach Sections</relationshipLabel>
        <relationshipName>Sales_Coach_Sections</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Section_Ordering__c</fullName>
        <label>Section Ordering</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Section_Width__c</fullName>
        <label>Section Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Sales Coach Section</label><nameField>
        <displayFormat>SCS-{0000}</displayFormat>
        <label>Sales Coach Section Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Sales Coach Sections</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>